# amethyst

./: README.md  example_dataloader.py  main.py  path.txt  requirements.txt  setup.cfg  setup.py
amethyst/: __init__.py
amethyst/dataloader/: __init__.py  data_utils.py  dataset.py  split.py
amethyst/eval/: eval_methods.py  eval_utils.py
amethyst/models/: __init__.py  base.py  exceptions.py  model_utils.py  predictions.py
amethyst/models/bivaecf/: __init__.py  bivae.py  bivaecf.py
amethyst/models/ibpr/: __init__.py  ibpr.py  ibprcf.py
amethyst/tests/: test_dataloader.py
data/: movielens100k.csv
tests/: test_dataloader.py
