[metadata]
name = amethyst-radioactive11
version = 0.0.1
author = Arijit Roy
author_email = roy.arijit2001@gmail.com
description = A low-code recommendation engine generation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/radioactive11/amethyst
project_urls =
    Bug Tracker = https://github.com/radioactive11/amethyst/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = amethyst
packages = find:
python_requires = >=3.7

[options.packages.find]
where = amethyst